Rename FilePath to VirtualFile